Add user option to only include favorites in Next Up

--- a/src/userparentalcontrol.html
+++ b/src/userparentalcontrol.html
@@ -24,7 +24,7 @@
                 <div>
                     <div class="detailSectionHeader">
                         <h1>${LabelBlockContentWithTags}</h1>
-                        <button is="emby-button" type="button" class="raised btnAddBlockedTag submit mini" style="margin-left:1em;" title="${ButtonAddUser}">
+                        <button is="emby-button" type="button" class="raised btnAddBlockedTag submit mini" style="margin-left:1em;" title="${ButtonAddTag}">
                             <i class="md-icon">add</i>
                             <span>${ButtonAdd}</span>
                         </button>
