--- a/src/mypreferenceshome.html
+++ b/src/mypreferenceshome.html
@@ -132,6 +132,18 @@
                 </label>
 
             </div>
+
+            <div class="detailSection">
+                <h1>
+                    ${HeaderNextUp}
+                </h1>
+                <br />
+                <label class="checkboxContainer">
+                    <input class="chkNextUpFavoritesOnly" type="checkbox" is="emby-checkbox" />
+                    <span>${OptionNextUpFavoritesOnly}</span>
+                </label>
+            </div>
+
             <button is="emby-button" type="submit" class="raised button-submit block btnSave hide">
                 <span>${ButtonSave}</span>
             </button>
